# DiChat

./: .env.example  .gitignore  README.md  docker-compose.yml  test_ws.html
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: d2212e59d123_initial_schema_computers_rooms_messages.py  ecf90e8f6250_add_name_to_rooms.py
backend/app/: main.py  seed.py  utils.py  ws_manager.py
backend/app/models/: __init__.py  computer.py  message.py  room.py
backend/app/routers/: admin.py  me.py  messages.py  rooms.py  ws.py
backend/app/schemas/: computer.py  message.py  room.py
frontend/: package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/admin/chat/[roomId]/: page.tsx
frontend/app/admin/computers/: computers-client.tsx  page.tsx
frontend/components/: chat-layout.tsx  message-input.tsx  message-list.tsx  user-provider.tsx
frontend/hooks/: use-me.ts  useWebSocket.ts
frontend/lib/: api.ts
